# gitmark

./: README.md  gitmark-spec.md  pyproject.toml  setup.py
.github/workflows/: auto-tag.yml  release.yml
gitmark/: __init__.py  commands.py  git_ops.py  hunk_parser.py  main.py  state.py
