[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmark"
version = "0.1.1"
description = "Assign uncommitted changes to named commits for clean git history"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
gitmark = "gitmark.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitmark*"]
